--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -151,7 +151,6 @@ body {
 }
 #navigation-1 {
     padding-left: 2%;
-    padding-top: 3px;
 }
 #navigation-1 .left {
 	float: left;
@@ -162,7 +161,13 @@ body {
 #navigation-2 .left {
 	float: left;
 }
-@media (max-width: 940px) {
+button.navbar-toggle {
+  padding-top: 18px;
+}
+.navbar-toggle {
+  padding: 17px 15px !important;
+}
+@media (max-width: 995px) {
   .navbar-header {
       float: none;
   }
@@ -279,12 +284,12 @@ body {
 .navbar-form .form-group input.form-control .morop {
 	width: 50px;
 }
-@media (max-width: 1115px) {
+@media (max-width: 1190px) {
 	.navbar-collapse .navbar-form {
 		display: none !important; 
 	}
 }
-@media (min-width: 1115px) {
+@media (min-width: 1190px) {
 	.navbar-collapse #src {
 		display: none;
 	}
@@ -485,7 +490,7 @@ ul.dropdown-menu {
 #navi > .user-menu > .dropdown-menu > .user-body a {
   color: #444 !important;
 }
-@media (min-width: 940px) {
+@media (min-width: 995px) {
 	#navi .dropdown {
 		display : none;
 	}
@@ -539,7 +544,7 @@ ul.dropdown-menu {
 		margin-top: 13px;
 	}
 }
-@media (max-width: 385px) {
+@media (max-width: 410px) {
   #navi .dropdown #nama-user {
     display:none;
   }
