--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,7 +5,7 @@ html {
 body {
 	min-height: 2000px;
 	margin-bottom: 300px;
-  	min-width: 275px;
+  min-width: 275px;
 }
 
 /**
@@ -161,11 +161,21 @@ body {
 #navigation-2 .left {
 	float: left;
 }
-button.navbar-toggle {
-  padding-top: 18px;
+.navbar-inverse .navbar-toggle {
+  border-color: #333;
 }
 .navbar-toggle {
-  padding: 17px 15px !important;
+  position: relative;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  border-radius: 4px;
+}
+@media (max-width: 768px){
+  .navbar-brand {
+    margin-left: -15px;
+  }
 }
 @media (max-width: 995px) {
   .navbar-header {
@@ -202,7 +212,7 @@ button.navbar-toggle {
   .collapse.in{
       display:block !important;
   }
-  .navbar-collapse .navbar-right {
+  .navbar-collapse .navbar-right{
 		display: none;
 	}
 }
@@ -211,28 +221,12 @@ button.navbar-toggle {
 		margin-left: 0px !important;
 	}
 }
-@media (max-width: 768px) {
-	.navbar-collapse {
-    position: relative;
-    padding-top: 35px !important;
-    max-height: 270px;
-  	}
-	 .navbar-collapse .navbar-form {
-  	position: absolute;
-  	top: 0;
-  	right: 1px;
-  	width: 100%;
-  	padding: 4px;
-  	margin: 0;
-  	z-index: 0;
-  	border: 0;
-  	}
-}
 
 /**
  * =========================================================================================
  * 
  * search form nav
+ * search ke 1
  */
 #form-search {
 	float: right;
@@ -285,7 +279,7 @@ button.navbar-toggle {
 	width: 50px;
 }
 @media (max-width: 1190px) {
-	.navbar-collapse .navbar-form {
+	.navbar-collapse #form-search {
 		display: none !important; 
 	}
 }
@@ -294,6 +288,169 @@ button.navbar-toggle {
 		display: none;
 	}
 }
+/**
+ * search form nav 
+ * Nav search ke 2 (full screen)
+ */
+
+#srch {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    
+    -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+
+    -webkit-transform: translate(0px, -100%) scale(0, 0);
+  -moz-transform: translate(0px, -100%) scale(0, 0);
+  -o-transform: translate(0px, -100%) scale(0, 0);
+  -ms-transform: translate(0px, -100%) scale(0, 0);
+  transform: translate(0px, -100%) scale(0, 0);
+    
+    opacity: 0;
+}
+
+#srch.open {
+    -webkit-transform: translate(0px, 0px) scale(1, 1);
+    -moz-transform: translate(0px, 0px) scale(1, 1);
+  -o-transform: translate(0px, 0px) scale(1, 1);
+  -ms-transform: translate(0px, 0px) scale(1, 1);
+  transform: translate(0px, 0px) scale(1, 1); 
+    opacity: 1;
+}
+
+#srch input[type="search"] {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    color: rgb(255, 255, 255);
+    background: rgba(0, 0, 0, 0);
+    font-size: 60px;
+    font-weight: 300;
+    text-align: center;
+    border: 0px;
+    margin: 0px auto;
+    margin-top: -51px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;
+}
+#srch .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: 61px;
+    margin-left: -45px;
+}
+#srch .close {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    color: #fff;
+  background-color: #dd4b39;
+  border-color: #d73925;
+  opacity: 1;
+  padding: 10px 17px;
+  font-size: 27px;
+}
+@media (max-width: 767px) {
+  .navbar-header ul #aaa {
+    display: none !important;
+  }
+}
+@media (min-width: 995px) {
+  .navbar-header ul #aaa {
+    display: none !important;
+  }
+}
+/**
+ * Search ke 3 
+ * navigation toggle
+ */
+#aaaa .navbar-form .form-group {
+  height: 35px;
+  background-color: #dddddd;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  border-radius: 25px;
+  border: 1px solid #ccc;
+}
+#aaaa .navbar-form .form-group:hover {
+  background-color: #ffffff;
+}
+#aaaa .navbar-form .form-group input.form-control {
+  border: 0 none;
+  background: transparent;
+  box-shadow: none;
+  display:block;
+}
+#aaaa .navbar-form .form-group input.form-control::-webkit-input-placeholder {
+  display: none;
+}
+#aaaa .navbar-form .form-group input.form-control:-moz-placeholder {
+     /* Firefox 18- */
+     display: none;
+   }
+#aaaa .navbar-form .form-group input.form-control::-moz-placeholder {
+  /* Firefox 19+ */
+  display: none;
+}
+#aaaa .navbar-form .form-group input.form-control:-ms-input-placeholder {
+  display: none;
+}
+#aaaa .navbar-form .form-group span.form-control-feedback {
+  position: absolute;
+  top: -1px;
+  right: -2px;
+  z-index: 2;
+  display: block;
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  color: #333;
+  left: initial;
+  font-size: 14px;
+}
+#aaaa .navbar-form .form-group input.form-control .morop {
+  width: 50px;
+}
+@media (max-width: 767px) {
+    #aaaa {
+
+    }
+   .navbar-collapse {
+    position: relative !important;
+    padding-top: 35px;
+    max-height: 250px;
+    }
+    .navbar-collapse .navbar-form {
+    position: absolute;
+    top: 0;
+    right: 1px;
+    width: 100%;
+    padding: 4px;
+    margin: 0;
+    z-index: 0;
+    border: 0;
+  }
+}
+@media (min-width: 995px) {
+  .navbar-collapse #aaaa {
+    display: none;
+  }
+}
+@media (min-width: 767px) {
+  .navbar-collapse ul #aaaa {
+    display: none !important;
+  }
+}
+
 /**
  * ========================================================================================
  * 
@@ -352,6 +509,9 @@ ul.dropdown-cart li .item-right{
 ul.dropdown-cart li .item-right button{
     margin-top:14px;
 }
+ul.dropdown-cart {
+    min-width:273px;
+}
 
 /**
  * Nav menu Shopping cart
@@ -404,15 +564,12 @@ ul.dropdown-cart li .item-right button{
  * Nav Menu User image
  * User nav 1
  */
-.dropdown-menu li.user-header {
-	background-color: #3c8dbc;
+.navbar-nav .dropdown-user {
+  right: auto;
+  left: -100px;
 }
-.navbar-right .dropdown-user {
-	right: auto;
-	left: -100px;
-}
-ul.dropdown-cart {
-    min-width:273px;
+.dropdown-user li.user-header {
+  background-color: #3c8dbc;
 }
 
 /**
@@ -424,10 +581,12 @@ ul.dropdown-cart {
   list-style: none;
 	margin-top: 15px;
 	font-size: 15px;
+  padding-left: 0px;
 }
 #navi > li {
 	position: relative;
 	float: left;
+  margin-right: 10px;
 }
 #navi > li > a {
 	color: #adadad;
@@ -625,6 +784,6 @@ ul.dropdown-cart {
 	background-color: #222;
 	border-color: #080808;
 }
-#second-footer.navbar {
+#second-footer .navbar {
 	height: 10px !important;
 }
